# turkish-legal-qa-lora

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  turkish_legal_lora_finetuning.ipynb
serving/: Dockerfile  README.md  app.py  main.py  pyproject.toml
training/: README_MODEL.md  pyproject.toml  upload_to_hf.py
