[project]
name = "turkish-legal-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.12.0",
    "bitsandbytes==0.49.0",
    "datasets==4.4.2",
    "jupyter==1.1.1",
    "peft==0.18.0",
    "protobuf==6.33.2",
    "sentencepiece==0.2.1",
    "tiktoken==0.12.0",
    "trl==0.26.2",
]
