[project]
name = "serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "fastapi>=0.128.0",
    "peft>=0.18.0",
    "protobuf>=6.33.2",
    "pydantic>=2.12.5",
    "torch>=2.9.1",
    "transformers[sentencepiece]>=4.57.3",
    "uvicorn[standard]>=0.40.0",
]
